--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,3 @@
-astroid==2.3.1
-certifi==2019.9.11
-chardet==3.0.4
-Click==7.0
 Flask==1.1.1
-Flask-Cors==3.0.8
-idna==2.8
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
+flask-cors==3.0.8
 mysql-connector==2.2.9
-pkg-resources==0.0.0
-pylint==2.4.2
-requests==2.22.0
-six==1.12.0
-typed-ast==1.4.0
-urllib3==1.25.6
-Werkzeug==0.15.5
-wrapt==1.11.2
